@@ -29,9 +29,7 @@ import static uk.ac.manchester.tornado.runtime.common.Tornado.SHOULD_LOAD_RMI;
 
 import java.lang.reflect.Method;
 import java.util.List;
-import java.util.Map;
 import java.util.ServiceLoader;
-import java.util.WeakHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
@@ -58,15 +56,14 @@ import jdk.vm.ci.runtime.JVMCIBackend;
 import uk.ac.manchester.tornado.api.TornadoDriver;
 import uk.ac.manchester.tornado.api.TornadoRuntimeInterface;
 import uk.ac.manchester.tornado.api.enums.TornadoVMBackendType;
+import uk.ac.manchester.tornado.api.exceptions.TornadoDriverNotFound;
 import uk.ac.manchester.tornado.runtime.common.Tornado;
-import uk.ac.manchester.tornado.runtime.common.TornadoAcceleratorDevice;
-import uk.ac.manchester.tornado.runtime.common.TornadoLogger;
 import uk.ac.manchester.tornado.runtime.common.TornadoOptions;
+import uk.ac.manchester.tornado.runtime.common.TornadoXPUDevice;
 import uk.ac.manchester.tornado.runtime.common.enums.TornadoDrivers;
 import uk.ac.manchester.tornado.runtime.graal.compiler.TornadoSnippetReflectionProvider;
-import uk.ac.manchester.tornado.runtime.tasks.GlobalObjectState;
 
-public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRuntimeInterface {
+public final class TornadoCoreRuntime implements TornadoRuntimeInterface {
 
     private static final ThreadFactory executorThreadFactory = new ThreadFactory() {
         private int threadId = 0;
@@ -87,15 +84,14 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
     private static Lock lock = new ReentrantLock();
     private static DebugContext debugContext = null;
     private static OptionValues options;
-    private final Map<Object, GlobalObjectState> objectMappings;
+
     private final JVMCIBackend vmBackend;
     private final HotSpotJVMCIRuntime vmRuntime;
-    private final TornadoVMConfig vmConfig;
-    private TornadoAcceleratorDriver[] tornadoVMDrivers;
+    private final TornadoVMConfigAccess vmConfig;
+    private final TornadoAcceleratorDriver[] tornadoVMDrivers;
     private int driverCount;
 
     private TornadoCoreRuntime() {
-        objectMappings = new WeakHashMap<>();
 
         initOptions();
         guarantee(!GraalOptions.OmitHotExceptionStacktrace.getValue(options), "error");
@@ -105,7 +101,7 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         }
         vmRuntime = (HotSpotJVMCIRuntime) JVMCI.getRuntime();
         vmBackend = vmRuntime.getHostJVMCIBackend();
-        vmConfig = new TornadoVMConfig(vmRuntime.getConfigStore(), vmBackend.getMetaAccess());
+        vmConfig = new TornadoVMConfigAccess(vmRuntime.getConfigStore(), vmBackend.getMetaAccess());
         tornadoVMDrivers = loadDrivers();
     }
 
@@ -134,7 +130,7 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         return runtime.vmRuntime;
     }
 
-    public static TornadoVMConfig getVMConfig() {
+    public static TornadoVMConfigAccess getVMConfig() {
         return runtime.vmConfig;
     }
 
@@ -157,21 +153,14 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         options = new OptionValues(opts);
     }
 
-    public void clearObjectState() {
-        for (GlobalObjectState gs : objectMappings.values()) {
-            gs.clear();
-        }
-        objectMappings.clear();
-    }
-
     private TornadoAcceleratorDriver[] loadDrivers() {
         ServiceLoader<TornadoDriverProvider> loader = ServiceLoader.load(TornadoDriverProvider.class);
-        List<TornadoDriverProvider> providerList = StreamSupport.stream(loader.spliterator(), false).sorted().collect(Collectors.toList());
+        List<TornadoDriverProvider> providerList = StreamSupport.stream(loader.spliterator(), false).sorted().toList();
         TornadoAcceleratorDriver[] tornadoAcceleratorDrivers = new TornadoAcceleratorDriver[TornadoDrivers.values().length];
         int index = 0;
         for (TornadoDriverProvider provider : providerList) {
             if (Tornado.FULL_DEBUG) {
-                System.out.println("Loading DRIVER: " + provider);
+                System.out.println(STR."[INFO] Loading DRIVER: \{provider}");
             }
             boolean isRMI = provider.getName().equalsIgnoreCase("RMI Driver");
             if ((!isRMI) || (isRMI && SHOULD_LOAD_RMI)) {
@@ -186,14 +175,6 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
         return tornadoAcceleratorDrivers;
     }
 
-    public GlobalObjectState resolveObject(Object object) {
-        if (!objectMappings.containsKey(object)) {
-            final GlobalObjectState state = new GlobalObjectState();
-            objectMappings.put(object, state);
-        }
-        return objectMappings.get(object);
-    }
-
     @Override
     public <D extends TornadoDriver> int getDriverIndex(Class<D> driverClass) {
         for (int driverIndex = 0; driverIndex < tornadoVMDrivers.length; driverIndex++) {
@@ -201,7 +182,7 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
                 return driverIndex;
             }
         }
-        throw shouldNotReachHere("Could not find index for driver: " + driverClass);
+        throw shouldNotReachHere(STR."Could not find index for driver: \{driverClass}");
     }
 
     @Override
@@ -219,6 +200,9 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
 
     @Override
     public TornadoAcceleratorDriver getDriver(int index) {
+        if (index > tornadoVMDrivers.length) {
+            throw new TornadoDriverNotFound("Tornado Driver Not Found");
+        }
         return tornadoVMDrivers[index];
     }
 
@@ -251,8 +235,8 @@ public final class TornadoCoreRuntime extends TornadoLogger implements TornadoRu
     }
 
     @Override
-    public TornadoAcceleratorDevice getDefaultDevice() {
-        return (tornadoVMDrivers == null || tornadoVMDrivers[DEFAULT_DRIVER] == null) ? JVM : (TornadoAcceleratorDevice) tornadoVMDrivers[DEFAULT_DRIVER].getDefaultDevice();
+    public TornadoXPUDevice getDefaultDevice() {
+        return (tornadoVMDrivers == null || tornadoVMDrivers[DEFAULT_DRIVER] == null) ? JVM : (TornadoXPUDevice) tornadoVMDrivers[DEFAULT_DRIVER].getDefaultDevice();
     }
 
 }
